# halftime_hackathon_project

./: docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/src/mysite/: main.py
frontend/static/: index.html
