[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mysite"
description = "My awesome site"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"
dependencies = [
  "fastapi",
  "sqlalchemy[asyncio]",
  "asyncpg",
]
[tool.setuptools.packages.find]
where = ["src"]
